[package]
name = "rsdu"
version = "0.1.0"
edition = "2021"
authors = ["rsdu contributors"]
description = "A disk usage analyzer with an ncurses interface - Rust implementation of ncdu"
license = "MIT"
repository = "https://github.com/user/rsdu"
keywords = ["disk-usage", "ncurses", "file-system", "analyzer"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "rsdu"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
crossterm = "0.27"
ratatui = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
rayon = "1.8"
humansize = "2.1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
walkdir = "2.4"
indicatif = "0.17"
nix = { version = "0.27", features = ["fs"] }
libc = "0.2"
byteorder = "1.5"
zstd = "0.12"
glob = "0.3"
atty = "0.2"
num_cpus = "1.16"
unicode-width = "0.1"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"



[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 0
